--- a/package.json
+++ b/package.json
@@ -37,9 +37,8 @@
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build"
-
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build -r git@github.com:Zengxinqiu/Zengxinqiu.github.io.git -b main"
   },
   "eslintConfig": {
     "extends": [
